--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -9,7 +9,7 @@
       <td><%= link_to image_tag( "encrypted_small.png" ) + " " + account.accountname, [@team, @group, account] %></td>
       <td><%= account.description %></td>
       <td><%= link_to image_tag("edit.png"), [:edit, @team, @group, account] %></td>
-      <td><%= link_to image_tag("remove.png"), [@team, @group, account], :confirm => t(:confirmation), :method => :delete %></td>
+      <td><%= link_to_destroy [@team, @group, account], account %></td>
     </tr>
   <% end %>
 
