--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,13 @@
 <div class="footer">
   <div class="container">
-    <p class="text-muted" >
+    <div class="pull-left">
       <a target="_blank" href="https://github.com/puzzle/cryptopus">Cryptopus</a>
-      <span class="pull-right">
-        <small><%=t :auto_logout %> <span id='countdown'></small></span>
-      </span>
-    </p>
+    </div>
+    <div class="pull-right">
+      <small><%=t :auto_logout %> <span id='countdown'></small></span>
+    </div>
+    <div class="pull-right">
+      <%= render 'layouts/locale' %>
+    </div>
   </div>
 </div>
