--- a/app/views/layouts/_locale.html.erb
+++ b/app/views/layouts/_locale.html.erb
@@ -1,29 +1,7 @@
-<%
-# $Id$
-#
-# Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU Affero General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU Affero General Public License for more details.
-#
-# You should have received a copy of the GNU Affero General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
--%>
-<% if current_user %>
-  <% user_locale = current_user.preferred_locale %>
-  <div id="locale-selection" class="alignright">
+<% user_locale = current_user.preferred_locale %>
 
-  <%= form_tag(changelocale_login_path) do %>
-    <select name="new_locale" onchange="this.form.submit()">
-      <%= options_for_select(I18n.available_locales.map{ |locale| [I18n.name_for_locale(locale), locale] }, user_locale) %>
-    </select>
-  <% end %>
-  </div>
+<%= form_tag(changelocale_login_path) do %>
+  <select name="new_locale" onchange="this.form.submit()" class="">
+    <%= options_for_select(I18n.available_locales.map{ |locale| [I18n.name_for_locale(locale), locale] }, user_locale) %>
+  </select>
 <% end %>
