revised design, new colors and icon

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,4 +30,10 @@
 //
 // Example:
 // @link-color: #ff0000;
-@brand-primary: #ff8c00;
+
+@brand-primary: #4790A8;
+@navbar-inverse-bg: @brand-primary;
+@navbar-inverse-link-color: white;
+@navbar-inverse-link-hover-bg: @navbar-inverse-link-active-bg;
+@input-border-focus: transparent;
+@table-bg: transparent;
