--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,7 +4,12 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+  margin-bottom: 50px;
+  background-color: #F7F6F2;
+}
+
+input[type=text], input[type=password], input[type=number]{
+  background-color: #EBE6E2;
 }
 
 .main {
@@ -42,109 +47,6 @@ body {
   margin-left: -250px;
 }
 
-/* login form */
-.login-form {
-  height: 350px;
-  padding: 10px;
-  background-image: url("form_bg.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  text-align: center;
-}
-
-.login-form .form-group {
-  padding-bottom: 10px;
-}
-
-.login-form input {
-  margin-bottom: 10px;
-}
-
-.login-form fieldset {
-  max-width: 250px;
-  margin: auto;
-}
-
-.login-form .btn {
-  width: 80%;
-}
-
-/* search and results */
-
-.search {
-  text-align: center;
-}
-
-input.search-input {
-  width: 60%;
-  margin: 4em auto;
-  padding: 1em;
-  height: 3.5em;
-}
-
-.result-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  background-color: #D9D9D9;
-  box-shadow: 1px 2px 5px #D9D9D9;
-}
-.result-list li {
-  @include clearfix;
-  display: block;
-  padding: 1em;
-  background: white;
-  margin-top: 1px;
-  min-height: 10em;
-}
-
-.result-description span{
-  float: left;
-  font-size: 15px;
-}
-
-.result-description {
-  float: left;
-  width: 60%;
-}
-.result-action {
-  float: right;
-  width: 35%;
-}
-
-.result-username,
-.result-password {
-  position: relative;
-}
-
-.password-link {
-  display: block;
-  background: #C9C9C9;
-  border-radius: 3px;
-  color: black;
-}
-
-.password-link, .result-username input, .result-password input{
-  padding: 6px 10px;
-  width: 205px;
-  font-size: 14px;
-  border: 1px solid #C9C9C9;
-}
-
-.result-username input:hover, .result-password input:hover{
-    cursor:text;
-}
-
-.clip_button {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-.result-password {
-  margin-top: 0.5em;
-}
-
 /*Icons*/
 
 [class^="icon-"],
@@ -160,10 +62,11 @@ input.search-input {
 .footer {
   position: fixed;
   bottom: 0;
-  height: 60px;
-  line-height: 60px;
-  background-color: #F5F5F5;
+  height: 50px;
+  line-height: 50px;
+  background-color: #EBE6E2;
   width: 100%;
+  border-top: 1px solid #CBC6C2;
 }
 
 .footer form {
