--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -4,6 +4,12 @@
 
 <table class='table table-striped'>
 
+  <tr>
+    <th><%=t '.account' %></th>
+    <th><%=t :description %></th>
+    <th colspan="3"><%=t :actions %></th>
+  </tr>
+
   <% @accounts.each do |account| %>
     <tr class="<%= cycle('odd', 'even') %>">
       <td><%= link_to image_tag( "encrypted_small.png" ) + " " + account.accountname, [@team, @group, account] %></td>
