changed to rails default time stamp

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -46,7 +46,7 @@
   </div>
   <br/>
 
-  <p><strong><%=t '.last_change', time_ago: (time_ago_in_words @account.updated_on) %></strong></p>
+  <p><strong><%=t '.last_change', time_ago: (time_ago_in_words @account.updated_at) %></strong></p>
   <br/>
 
   <strong><%=t '.attachments' %></strong>
