changed bootstrap default color

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,9 +31,8 @@
 // Example:
 // @link-color: #ff0000;
 
-@brand-primary: #4790A8;
+@brand-primary: #3E8F82;
 @navbar-inverse-bg: @brand-primary;
 @navbar-inverse-link-color: white;
 @navbar-inverse-link-hover-bg: @navbar-inverse-link-active-bg;
 @input-border-focus: transparent;
-@table-bg: transparent;
