--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,7 @@
 <h1><%=t '.title' %></h1>
 
+<%= link_to 'New', new_admin_user_path, class: 'btn btn-primary pull-right' %>
+
 <table class='table table-striped'>
   <tr>
     <th><%=t '.username' %></th>
