design update, remove unused gfx files

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -31,7 +31,7 @@
 // Example:
 // @link-color: #ff0000;
 
-@brand-primary: #3E8F82;
+@brand-primary: #3B7BBE;
 @navbar-inverse-bg: @brand-primary;
 @navbar-inverse-link-color: white;
 @navbar-inverse-link-hover-bg: @navbar-inverse-link-active-bg;
