--- a/app/assets/javascripts/templates/search/result_entry.hbs.erb
+++ b/app/assets/javascripts/templates/search/result_entry.hbs.erb
@@ -15,7 +15,7 @@
     <div class="result-action form-group">
       <div class="result-username select-click">
         <input id="username_{{id}}" type="text" value="{{username}}" class="form-control" readonly>
-        <button class="clip_button" data-clipboard-target="username_{{id}}" title="Click to copy">
+        <button class="clip_button_search" data-clipboard-target="username_{{id}}" title="Click to copy">
           <svg class="icon-clippy">
             <use xlink:href="#icon-clippy"></use>
           </svg>
@@ -25,7 +25,7 @@
       <div class="result-password select-click">
         <a href="#" class="password-link">Show password</a>
         <input id="password_{{id}}"type="text" class="password-hidden hide form-control" value="{{password}}" readonly>
-        <button class="clip_button" data-clipboard-target="password_{{id}}" title="Click to copy">
+        <button class="clip_button_search" data-clipboard-target="password_{{id}}" title="Click to copy">
           <svg class="icon-clippy">
             <use xlink:href="#icon-clippy"></use>
           </svg>
