--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -5,7 +5,7 @@
 <table class='table table-striped'>
 
   <tr>
-    <th><%=t '.account' %></th>
+    <th style='width: 150px;'><%=t '.account' %></th>
     <th><%=t :description %></th>
     <th colspan="3"><%=t :actions %></th>
   </tr>
@@ -14,8 +14,8 @@
     <tr class="<%= cycle('odd', 'even') %>">
       <td><%= link_to image_tag( "encrypted_small.png" ) + " " + account.accountname, [@team, @group, account] %></td>
       <td><%= account.description %></td>
-      <td><%= link_to image_tag("edit.png"), [:edit, @team, @group, account] %></td>
-      <td><%= link_to_destroy [@team, @group, account], account %></td>
+      <td class='action_icon'><%= link_to image_tag("edit.png"), [:edit, @team, @group, account] %></td>
+      <td class='action_icon'><%= link_to_destroy [@team, @group, account], account %></td>
     </tr>
   <% end %>
 
