--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,7 +5,7 @@
 <table class='table table-striped'>
 
   <tr>
-    <th><%=t '.group' %></th>
+    <th style='width: 150px;'><%=t '.group' %></th>
     <th><%=t :description %></th>
     <th colspan="3"><%=t :actions %></th>
   </tr>
@@ -14,8 +14,8 @@
     <tr class="<%= cycle('odd', 'even') %>">
       <td><%= link_to image_tag( "folder_open.png" ) + " " + %Q{#{group.name}}, team_group_accounts_path(@team, group) %></td>
       <td><%= group.description %></td>
-      <td><%= link_to image_tag("edit.png"), [:edit, @team, group] %></td>
-      <td><%= link_to_destroy [@team, group], group %></td>
+      <td class='action_icon'><%= link_to image_tag("edit.png"), [:edit, @team, group] %></td>
+      <td class='action_icon'><%= link_to_destroy [@team, group], group %></td>
     </tr>
   <% end %>
 
