--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,4 @@
-<% 
+<%
 # $Id$
 
 # Copyright (c) 2007 Puzzle ITC GmbH. All rights reserved.
@@ -17,16 +17,20 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -%>
 
-<h1><%=t '.title' %><br>"<%= @account.accountname %>"</h1>
+<h1><%=t '.title' %> ( <%= @account.accountname %> )</h1>
 
 <%= form_for [@team, @group, @account, @item], :html => { :multipart => true } do |f| %>
-	
-  <%= f.label t('.upload') %><br />
-  <%= f.file_field :file %>
 
-  <%= f.label :description %><br />
-  <%= f.text_area :description, options = {:cols => 37} %>
+	<div class="form-group">
+	  <%= f.label t('.upload') %>
+	  <%= f.file_field :file %>
+	</div>
 
-  <%= f.submit t('.upload_file') %>
+	<div class="form-group">
+		<%= f.label :description %><br />
+		<%= f.text_area :description, class: 'form-control'%>
+	</div>
+
+  <%= f.submit t('.upload_file'), class: 'btn btn-primary'%>
 
 <% end %>
