--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -11,6 +11,11 @@
       <%= f.check_box :private %>
       <%= t('.private') %>
     <% end %>
+    <%= image_tag('info.png', class: 'info_icon private_info') %>
+
+    <p class="description private">
+      <%= t('teams.description.private') %>
+    </p>
   </div>
 
   <% unless current_user.root? %>
@@ -19,7 +24,13 @@
         <%= f.check_box :noroot %>
         <%= t('.noroot') %>
       <% end %>
+      <%= image_tag('info.png', class: 'info_icon no_root_info') %>
+
+      <p class="description no_root">
+        <%= t('teams.description.no_root') %>
+      </p>
     </div>
+
   <% end %>
 
   <div class="form-group">
@@ -29,3 +40,5 @@
 
   <%= f.submit @submit_button_text, class: 'btn btn-primary' %>
 <% end %>
+
+<%= javascript_include_tag :info_button %>
