team: noroot or private cannot be changed

--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -7,12 +7,8 @@
   </div>
 
   <div class="checkbox">
-    <%= f.label :private do %>
-      <%= f.check_box :private %>
-      <%= t('.private') %>
-    <% end %>
+    <%= labeled_check_box(f, :private, @team.new_record?) %>
     <%= image_tag('info.png', class: 'info_icon private_info') %>
-
     <p class="description private">
       <%= t('teams.description.private') %>
     </p>
@@ -20,10 +16,7 @@
 
   <% unless current_user.root? %>
     <div class="checkbox">
-      <%= f.label :noroot do %>
-        <%= f.check_box :noroot %>
-        <%= t('.noroot') %>
-      <% end %>
+      <%= labeled_check_box(f, :noroot, @team.new_record?) %>
       <%= image_tag('info.png', class: 'info_icon no_root_info') %>
 
       <p class="description no_root">
