--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,6 +3,7 @@
   <%= text_field_tag :search_string,  params[:search_string], autocomplete: 'off', autofocus: true, class: 'form-control search-input' %>
 
 </div>
+<div class='result-info' style='display: none;'><%= t('.no_results_found')%></div>
 <ul class="search-result result-list">
 </ul>
 
