Refactoring: List Teammembers

--- a/app/views/teammembers/_index.erb
+++ b/app/views/teammembers/_index.erb
@@ -1,9 +1,7 @@
 <h2><%=t '.members' %></h2>
-<table>
-  <% teammember_list.each do |teammember| %>
-    <tr class="<%= cycle('odd', 'even') %>">
-      <td><%= teammember.user.label %></td>
-      <td><%= action_icon(teammember) %></td>
-    </tr>
+<ul>
+  <% @teammembers.each do |teammember| %>
+    <%= teammember_entry(teammember) %>
   <% end %>
-</table>
+  <%= teammember_root_entry %>
+</ul>
