--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -3,17 +3,17 @@
 
   <div class="form-group">
     <%= f.label :account %>
-    <%= f.text_field :accountname, autofocus: true, class: 'form-control' %>
+    <%= f.text_field :accountname, autocomplete: :off, autofocus: true, class: 'form-control' %>
   </div>
 
   <div class="form-group">
     <%= f.label :username %>
-    <%= f.text_field :username, class: 'form-control' %>
+    <%= f.text_field :username, autocomplete: :off, class: 'form-control' %>
   </div>
 
   <div class="form-group">
     <%= f.label :password %>
-    <%= f.password_field :password, class: 'form-control' %>
+    <%= f.password_field :password, autocomplete: :off, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :description %>
