new images and styling

--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -12,7 +12,7 @@
 
   <% @accounts.each do |account| %>
     <tr class="<%= cycle('odd', 'even') %>">
-      <td><%= link_to image_tag( "encrypted_small.png" ) + " " + account.accountname, [@team, @group, account] %></td>
+      <td><%= link_to image_tag( "encrypted_small.svg" ) + " " + account.accountname, [@team, @group, account] %></td>
       <td><%= account.description %></td>
       <td class='action_icon'><%= link_to image_tag("edit.svg"), [:edit, @team, @group, account] %></td>
       <td class='action_icon'><%= link_to_destroy [@team, @group, account], account %></td>
