--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -47,7 +47,7 @@
     <% for item in @items %>
       <tr class="<%= cycle( 'odd', 'even' ) %>">
         <td>
-          <%= link_to image_tag("encrypted.svg") + item.filename, [@team, @group, @account, item] %>
+          <%= link_to image_tag("news.svg") + item.filename, [@team, @group, @account, item] %>
         </td>
         <td valign="top"><%= item.description %></td>
         <td class='action_icon'><%= link_to_destroy [@team, @group, @account, item], item %></td>
