--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,5 +31,7 @@
       </div>
     </div>
   </nav>
-  <%= render_breadcrumbs separator: ' > '%>
+  <div class="breadcrumbs">
+    <%= render_breadcrumbs separator: ' > '%>
+  </div>
 <% end %>
