--- a/app/views/accounts/_form.html.erb
+++ b/app/views/accounts/_form.html.erb
@@ -8,12 +8,12 @@
 
   <div class="form-group">
     <%= f.label :username %>
-    <%= f.text_field :username, autocomplete: :off, class: 'form-control' %>
+    <%= f.text_field :cleartext_username, autocomplete: :off, class: 'form-control' %>
   </div>
 
   <div class="form-group">
     <%= f.label :password %>
-    <%= f.password_field :password, autocomplete: :off, class: 'form-control' %>
+    <%= f.password_field :cleartext_password, autocomplete: :off, class: 'form-control' %>
   </div>
   <div class="form-group">
     <%= f.label :description %>
