--- a/app/views/layouts/_flashes.html.erb
+++ b/app/views/layouts/_flashes.html.erb
@@ -1,9 +1,13 @@
 <% if flash[:notice] %>
-  <div class="alert alert-info"><%= flash[:notice] %>
-    <a class="close" title="close" aria-label="close" data-dismiss="alert" href="#">x</a>
+  <div class="alert alert-info">
+  <%= flash[:notice] %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span></button>
   </div>
 <% elsif flash[:error] %>
-  <div class="alert alert-danger"><%= flash[:error] %>
-    <a class="close" title="close" aria-label="close" data-dismiss="alert" href="#">x</a>
+  <div class="alert alert-danger">
+  <%= flash[:error] %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span></button>
   </div>
 <% end %>
