--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -11,7 +11,7 @@
     <th colspan="3"><%=t :actions %></th>
   </tr>
 
-  <% for user in @users.unlocked  %>
+  <% @users.unlocked.each do |user|  %>
       <tr class="<%= cycle( 'odd', 'even' ) %>">
         <td><%= user.username %></td>
         <td><%= user.label %></td>
@@ -51,7 +51,7 @@
         <th><%=t '.name' %></th>
         <th><%=t '.action' %></th>
     </tr>
-    <% for user in User.all.locked  %>
+    <% @users.unlocked.each do |user|  %>
         <tr class="<%= cycle( 'odd', 'even' ) %>">
           <td><%= link_to user.username, edit_admin_user_path(user) %></td>
           <td><%= user.label %></td>
@@ -68,7 +68,7 @@
 
 
 $(document).on('click', '.toggle-button', function() {
-  
+
   $(this).toggleClass('toggle-button-selected');
 
 });
